--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,9 @@
-Write help file properly.
-Add pay command.
+write help file properly.
+add pay command.
 	- pay student <money>.
 	- pay teacher <money>.
 add change teacher salary command.
-
+make all help with argument to be printed if the argument is incorrect.
+	- search noone
+	-> logSearchTeacherHelp.
+	-> logSearchStudentHelp.
